--- a/src/auth/Dockerfile
+++ b/src/auth/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11
 
 WORKDIR /app
 
-COPY requirements.txt /app
+COPY ./requirements.txt /app
 
 RUN apt-get update && apt-get upgrade -y  
 RUN python3 -m pip install --upgrade pip
