--- a/src/auth/Makefile
+++ b/src/auth/Makefile
@@ -1,6 +1,12 @@
 
 grpc:
 	python3 -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. auth.proto
-	
-server:
+
+server: install
 	python3 main.py
+
+install:
+	pip install -r requirements.txt
+
+test:
+	pytest
