--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -12,18 +12,18 @@ services:
     ports:
       - 5432:5432
 
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: always
-    container_name: pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@example.com
-      PGADMIN_DEFAULT_PASSWORD: adminpassword
-      PGADMIN_LISTEN_PORT: 5050
-    ports:
-      - 5050:5050
-    depends_on:
-      - db
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   restart: always
+  #   container_name: pgadmin
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: admin@example.com
+  #     PGADMIN_DEFAULT_PASSWORD: adminpassword
+  #     PGADMIN_LISTEN_PORT: 5050
+  #   ports:
+  #     - 5050:5050
+  #   depends_on:
+  #     - db
 
   # fastapi_1:
   #   build: ./app
@@ -65,7 +65,7 @@ services:
     ports:
       - 50051:50051
 
-
+      
   # nginx:
   #   image: nginx:latest
   #   container_name: nginx
