--- a/src/auth/Makefile
+++ b/src/auth/Makefile
@@ -1,8 +1,9 @@
+all: install grpc server
 
 grpc:
-	python3 -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. auth.proto
+	python3 -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. ./auth.proto
 
-server: install
+server:
 	python3 main.py
 
 install:
