--- a/src/auth/.env
+++ b/src/auth/.env
@@ -3,3 +3,7 @@ DB_PORT=5432
 DB_USER=postgres
 DB_NAME=auth
 DB_PASSWORD=postgres
+
+JWT_SECRET_KEY=secret_key
+JWT_ALGORITHM=HS256
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=15
