--- a/src/auth/requirements.txt
+++ b/src/auth/requirements.txt
@@ -1,14 +1,12 @@
 grpcio 
 grpcio-tools
-dotenv
+python-dotenv
 sqlmodel
 psycopg2
 pydantic-extra-types
 pydantic[email]
 phonenumbers
-opyoid
 sqlalchemy
 sqlalchemy-utils
 passlib
 pyjwt
-pytest
