--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -12,70 +12,72 @@ services:
     ports:
       - 5432:5432
 
-  # pgadmin:
-  #   image: dpage/pgadmin4
-  #   restart: always
-  #   container_name: pgadmin
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: admin@example.com
-  #     PGADMIN_DEFAULT_PASSWORD: adminpassword
-  #     PGADMIN_LISTEN_PORT: 5050
-  #   ports:
-  #     - 5050:5050
-  #   depends_on:
-  #     - db
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: adminpassword
+      PGADMIN_LISTEN_PORT: 5050
+    ports:
+      - 5050:5050
+    depends_on:
+      - db
 
-  # fastapi_1:
-  #   build: ./app
-  #   restart: always
-  #   container_name: fastapi_1
-  #   working_dir: /app
-  #   volumes:
-  #     - ./app:/app
-  #   command: bash -c "pip install -r requirements.txt; python3 main.py"
-  #   environment:
-  #     DB_USER: "postgres"
-  #     DB_PASSWORD: "postgres"
+  fastapi_1:
+    build: ./app
+    restart: always
+    container_name: fastapi_1
+    working_dir: /app
+    volumes:
+      - ./app:/app
+    command: bash -c "make"
+    environment:
+      DB_USER: "postgres"
+      DB_PASSWORD: "postgres"
+    # ports:
+      # - 8000:8000
 
-  # fastapi_2:
-  #   container_name: fastapi_2
-  #   extends:
-  #     service: fastapi_1
-  #   environment:
-  #     DB_USER: "readonly_user"
-  #     DB_PASSWORD: "1"
-  #   command: bash -c "sleep 5; pip install -r requirements.txt; python3 main.py"
+  fastapi_2:
+    container_name: fastapi_2
+    extends:
+      service: fastapi_1
+    environment:
+      DB_USER: "readonly_user"
+      DB_PASSWORD: "1"
+    command: bash -c "sleep 5; pip install -r requirements.txt; python3 main.py"
 
-  # fastapi_3:
-  #   container_name: fastapi_3
-  #   extends:
-  #     service: fastapi_2
+  fastapi_3:
+    container_name: fastapi_3
+    extends:
+      service: fastapi_2
 
   auth:
-    build: ./app
+    build: ./auth
     restart: always
     container_name: auth
     working_dir: /app
     volumes:
       - ./auth:/app
-    command: bash -c "pip install -r requirements.txt; python3 main.py"
+    command: bash -c "make"
     environment:
       DB_USER: "postgres"
       DB_PASSWORD: "postgres"
-    ports:
-      - 50051:50051
+    # ports:
+      # - 50051:50051
 
       
-  # nginx:
-  #   image: nginx:latest
-  #   container_name: nginx
-  #   restart: always
-  #   ports:
-  #     - 443:443
-  #   volumes:
-  #     - ./nginx/statics/:/var/www/
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-  #     - ./nginx/ssl/:/etc/nginx/ssl
-  #   depends_on:
-  #     - pgadmin
-  #     - fastapi_1
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    restart: always
+    ports:
+      - 443:443
+    volumes:
+      - ./nginx/statics/:/var/www/
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/ssl/:/etc/nginx/ssl
+    depends_on:
+      - pgadmin
+      - fastapi_1
